Add information about me

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -4,23 +4,37 @@ title: "About Me"
 permalink: /about-me/
 ---
 
-<!-- <img src="/assets/images/profile.jpg" alt="My Photo" width="200" style="border-radius: 50%; margin-bottom: 20px;"> -->
+<img src="/assets/images/profile.jpg" alt="Ayushi Jain" width="200" style="border-radius: 50%; margin-bottom: 20px;">
 
-Hi! I'm Ayushi — a software engineer, AI enthusiast, and curious mind passionate about making machine learning more accessible.
+Hi! I’m **Ayushi Jain**, a Software Engineer at Microsoft with a curious mind, a passion for building intelligent systems, and a knack for solving real-world problems using AI.
 
-By day, I work on building intelligent systems and scalable infrastructure. By night (and weekends), I dive into generative models, tinker with Kaggle competitions, and write about my experiments with GANs, transformers, and other magical things from the world of AI.
+Currently, I work in Azure, where I’ve contributed to building **multi-agent CoPilot experiences**, scalable automation for **cloud services across 20+ regions**, and secure **B2B authentication systems**. My journey here started as an intern, where I built distributed ML pipelines using PySpark and Databricks, and I’ve grown since then into a full-time engineer working across infra, DevOps, and AI-driven user experiences.
 
-This blog is where I document what I learn, build, and sometimes break — with the hope that it might light the way for someone else. ✨
+Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**, which I continue to explore through certifications (Stanford’s XCS234 & XCS236, Azure AI Engineer Associate) and independent research.
 
-You’ll find technical articles, project breakdowns, and explorations into how deep learning models work under the hood.
+One of my proudest academic contributions is a paper I co-authored: *“Erasing Labor with Labor”*, presented at **ACM HT ’22**, which examined dark patterns in app design across 300k reviews and millions of installs. The project used a combination of data scraping, clustering, and UX analysis to uncover manipulative behaviors in popular mobile apps.
 
-Feel free to reach out, collaborate, or just say hi!
+Outside work, I love experimenting with **Generative AI** — from implementing **CycleGANs** for artistic image transformation to participating in Kaggle’s creative ML competitions. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
 
-📬 [Email Me](mailto:youremail@example.com)  
-🐦 [Twitter](https://twitter.com/yourhandle)  
-💼 [LinkedIn](https://www.linkedin.com/in/yourprofile)  
-💻 [GitHub](https://github.com/ayushi2019031)
+This site is powered by curiosity, late-night ideas, and the belief that knowledge grows when shared.
 
 ---
 
-*This site is powered by light, curiosity, and the occasional cup of coffee.*
+📌 **Quick Highlights**  
+- SWE @ Microsoft (L59 → L60) | Azure | CoPilot | Multi-agent systems  
+- Certifications: Azure (AZ-104, AI-102, DP-420), Google Cloud, XCS234, XCS236  
+- Research published in ACM HT’22  
+- Winner of Microsoft’s Global Hackathon (3rd prize)  
+- 700+ questions solved on LeetCode (Hard: 85)  
+- Built projects using PyTorch, Docker, Kubernetes, and ReactJS
+
+---
+
+🔗 **Connect With Me**  
+💻 [GitHub](https://github.com/ayushi2019031)  
+📇 [LinkedIn](https://linkedin.com/in/yourprofile)  
+📬 [Email](mailto:youremail@example.com)
+
+---
+
+*Thanks for stopping by — and if you’re building something cool in AI, I’d love to hear from you!*
