Modify about me post

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -4,36 +4,31 @@ title: "About Me"
 permalink: /about-me/
 ---
 
-<img src="/assets/images/profile.jpg" alt="Ayushi Jain" width="200" style="border-radius: 50%; margin-bottom: 20px;">
-
 Hi! I’m **Ayushi Jain**, a Software Engineer at Microsoft with a curious mind, a passion for building intelligent systems, and a knack for solving real-world problems using AI.
 
 Currently, I work in Azure, where I’ve contributed to building **multi-agent CoPilot experiences**, scalable automation for **cloud services across 20+ regions**, and secure **B2B authentication systems**. My journey here started as an intern, where I built distributed ML pipelines using PySpark and Databricks, and I’ve grown since then into a full-time engineer working across infra, DevOps, and AI-driven user experiences.
 
-Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**, which I continue to explore through certifications (Stanford’s XCS234 & XCS236, Azure AI Engineer Associate) and independent research.
+Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**. I continue to explore through university based courses (Stanford’s XCS234 & XCS236), Azure certifications and independent research.
 
-One of my proudest academic contributions is a paper I co-authored: *“Erasing Labor with Labor”*, presented at **ACM HT ’22**, which examined dark patterns in app design across 300k reviews and millions of installs. The project used a combination of data scraping, clustering, and UX analysis to uncover manipulative behaviors in popular mobile apps.
+Outside work, I love to read non-fiction and fiction books.. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
 
-Outside work, I love experimenting with **Generative AI** — from implementing **CycleGANs** for artistic image transformation to participating in Kaggle’s creative ML competitions. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
-
-This site is powered by curiosity, late-night ideas, and the belief that knowledge grows when shared.
+This site is powered by curiosity and the belief that knowledge grows when shared.
 
 ---
 
 📌 **Quick Highlights**  
-- SWE @ Microsoft (L59 → L60) | Azure | CoPilot | Multi-agent systems  
-- Certifications: Azure (AZ-104, AI-102, DP-420), Google Cloud, XCS234, XCS236  
+- SWE @ Microsoft (L59 → L60): Working in Azure Specialized org. 
+- Certifications: Azure (AZ-104, AZ-201, AI-102, DP-420), XCS234, XCS236  
 - Research published in ACM HT’22  
 - Winner of Microsoft’s Global Hackathon (3rd prize)  
-- 700+ questions solved on LeetCode (Hard: 85)  
-- Built projects using PyTorch, Docker, Kubernetes, and ReactJS
+- 700+ questions solved on LeetCode (Hard: 85, Medium: 486)  
 
 ---
 
 🔗 **Connect With Me**  
 💻 [GitHub](https://github.com/ayushi2019031)  
-📇 [LinkedIn](https://linkedin.com/in/yourprofile)  
-📬 [Email](mailto:youremail@example.com)
+📇 [LinkedIn](https://linkedin.com/in/ayushi31)  
+📬 [Email](mailto:atallakshaya@gmail.com)
 
 ---
 
