Added about me stuff

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -20,7 +20,7 @@ This site is powered by curiosity and the belief that knowledge grows when share
 - SWE @ Microsoft (L59 → L60): Working in Azure Specialized org. 
 - Certifications: Azure (AZ-104, AZ-201, AI-102, DP-420), XCS234, XCS236  
 - Research published in ACM HT’22  
-- Winner of Microsoft’s Global Hackathon (3rd prize)  
+- Winner of Microsoft’s Global Hackathon in Azure (3rd prize)  
 - 700+ questions solved on LeetCode (Hard: 85, Medium: 486)  
 
 ---
@@ -28,7 +28,8 @@ This site is powered by curiosity and the belief that knowledge grows when share
 🔗 **Connect With Me**  
 💻 [GitHub](https://github.com/ayushi2019031)  
 📇 [LinkedIn](https://linkedin.com/in/ayushi31)  
-📬 [Email](mailto:atallakshaya@gmail.com)
+📬 [Email](mailto:atallakshaya@gmail.com)  
+📄 [Resume](https://drive.google.com/file/d/1PQTa4VyE0c_gKYXfpbjV1FRRRo0Pm-4m/view?usp=sharing)  
 
 ---
 
