Added books I have read

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -10,7 +10,7 @@ Currently, I work in Azure, where I’ve contributed to building **multi-agent C
 
 Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**. I continue to explore through university based courses (Stanford’s XCS234 & XCS236), Azure certifications and independent research.
 
-Outside work, I love to read non-fiction and fiction books.. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
+Outside work, I love to read fiction and non-fiction books. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
 
 This site is powered by curiosity and the belief that knowledge grows when shared.
 
@@ -32,5 +32,16 @@ This site is powered by curiosity and the belief that knowledge grows when share
 📄 [Resume](https://drive.google.com/file/d/1PQTa4VyE0c_gKYXfpbjV1FRRRo0Pm-4m/view?usp=sharing)  
 
 ---
+
+📚 **Books I have recently read**
+
+- The Silent Patient
+- All The Light We Cannot See
+- The Story Of My Life
+- More Days At Morisaki Bookshop
+- Days At The Morisaki Bookshop
+- Agatha Christie's The Murder of Roger Ackroyd
+- Agatha Christie's And Then There Were None
+- How To Kill Your Family
 
 *Thanks for stopping by — and if you’re building something cool in AI, I’d love to hear from you!*
