Add authors and disclaimer

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -14,6 +14,8 @@ Outside work, I love to read fiction and non-fiction books. I document my projec
 
 This site is powered by curiosity and the belief that knowledge grows when shared.
 
+
+*This is my personal website, and all thoughts posted here are only mine and not linked to the workplace I am at.*
 ---
 
 📌 **Quick Highlights**  
@@ -27,14 +29,14 @@ This site is powered by curiosity and the belief that knowledge grows when share
 
 📚 **Books I have recently read**
 
-- The Silent Patient  
-- All The Light We Cannot See  
-- The Story Of My Life  
-- More Days At Morisaki Bookshop  
-- Days At The Morisaki Bookshop  
-- Agatha Christie's The Murder of Roger Ackroyd  
-- Agatha Christie's And Then There Were None  
-- How To Kill Your Family  
+- The Silent Patient, *Alex Michaelides*  
+- All The Light We Cannot See, *Anthony Doerr*  
+- The Story Of My Life, *Helen Keller*  
+- More Days At Morisaki Bookshop, *Satoshi Yagasawa*  
+- Days At The Morisaki Bookshop, *Satoshi Yagasawa*  
+- Agatha Christie's The Murder of Roger Ackroyd, *Agatha Christie*  
+- Agatha Christie's And Then There Were None, *Agatha Christie*  
+- How To Kill Your Family, *Bella Mackie* 
 
 ---
 
