--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -18,7 +18,7 @@ This site is powered by curiosity and the belief that knowledge grows when share
 
 📌 **Quick Highlights**  
 - SWE @ Microsoft (L59 → L60): Working in Azure Specialized org. 
-- Certifications: Azure (AZ-104, AZ-201, AI-102, DP-420), XCS234, XCS236  
+- Certifications: Azure ([AZ-104](https://learn.microsoft.com/en-us/credentials/certifications/azure-administrator/?practice-assessment-type=certification), [AZ-201](https://learn.microsoft.com/en-us/credentials/certifications/azure-developer/?practice-assessment-type=certification), [AI-102](https://learn.microsoft.com/en-us/credentials/certifications/azure-ai-engineer/?practice-assessment-type=certification), [DP-420](https://learn.microsoft.com/en-us/credentials/certifications/azure-cosmos-db-developer-specialty/?practice-assessment-type=certification)), [XCS234](https://digitalcredential.stanford.edu/check/3EA90D2274EE4BB33FFFBB2C93091C16880FBA58DF11119933D828B32AF3868DVzFTOEJtVitJN2ROWlZqS3RXeit6V0FVeDltUWFselVQUTI1UjNWNHllSDdrbTQv), [XCS236](https://online.stanford.edu/courses/xcs236-deep-generative-models)  
 - Research published in ACM HT’22  
 - Winner of Microsoft’s Global Hackathon in Azure (3rd prize)  
 - 700+ questions solved on LeetCode (Hard: 85, Medium: 486)  
@@ -32,8 +32,8 @@ This site is powered by curiosity and the belief that knowledge grows when share
 - The Story Of My Life, *Helen Keller*  
 - More Days At Morisaki Bookshop, *Satoshi Yagasawa*  
 - Days At The Morisaki Bookshop, *Satoshi Yagasawa*  
-- Agatha Christie's The Murder of Roger Ackroyd, *Agatha Christie*   
-- Agatha Christie's And Then There Were None, *Agatha Christie*  
+- The Murder of Roger Ackroyd, *Agatha Christie*   
+- And Then There Were None, *Agatha Christie*  
 - How To Kill Your Family, *Bella Mackie* 
 
 ---
