--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -19,9 +19,9 @@ This site is powered by curiosity and the belief that knowledge grows when share
 📌 **Quick Highlights**  
 - SWE @ Microsoft (L59 → L60): Working in Azure Specialized org. 
 - Certifications: Azure ([AZ-104](https://learn.microsoft.com/en-us/credentials/certifications/azure-administrator/?practice-assessment-type=certification), [AZ-201](https://learn.microsoft.com/en-us/credentials/certifications/azure-developer/?practice-assessment-type=certification), [AI-102](https://learn.microsoft.com/en-us/credentials/certifications/azure-ai-engineer/?practice-assessment-type=certification), [DP-420](https://learn.microsoft.com/en-us/credentials/certifications/azure-cosmos-db-developer-specialty/?practice-assessment-type=certification)), [XCS234](https://digitalcredential.stanford.edu/check/3EA90D2274EE4BB33FFFBB2C93091C16880FBA58DF11119933D828B32AF3868DVzFTOEJtVitJN2ROWlZqS3RXeit6V0FVeDltUWFselVQUTI1UjNWNHllSDdrbTQv), [XCS236](https://online.stanford.edu/courses/xcs236-deep-generative-models)  
-- Research published in ACM HT’22  
+- Research published in [ACM HT’22](https://dl.acm.org/doi/10.1145/3511095.3536368)  
 - Winner of Microsoft’s Global Hackathon in Azure (3rd prize)  
-- 700+ questions solved on LeetCode (Hard: 85, Medium: 486)  
+- 700+ questions solved on [LeetCode](https://leetcode.com/u/blue_bubble/) (Hard: 85, Medium: 486)  
 
 ---
 
