SEO changes, improving agentic ai blog

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -2,7 +2,9 @@
 layout: page
 title: "About Me"
 permalink: /about-me/
+description: "This blog is about Ayushi Jain, a software engineer at Microsoft, who has completed her Bachelors in Technology in IIIT Delhi from Computer Science Engineering. She is currently learning the internals of Machine Learning, Deep Learning and Artificial Intelligence and is eager to reach out to people who are working in similar domain."
 ---
+
 
 Hi! I’m **Ayushi Jain**, a Software Engineer at Microsoft with a curious mind, a passion for building intelligent systems, and a knack for solving real-world problems using AI.
 
