File name changes, image format fixes, hosting on custom blog

--- a/_posts/2025-07-18-about-me.md
+++ b/_posts/2025-07-18-about-me.md
@@ -8,7 +8,7 @@ Hi! I’m **Ayushi Jain**, a Software Engineer at Microsoft with a curious mind,
 
 Currently, I work in Azure, where I’ve contributed to building **multi-agent CoPilot experiences**, scalable automation for **cloud services across 20+ regions**, and secure **B2B authentication systems**. My journey here started as an intern, where I built distributed ML pipelines using PySpark and Databricks, and I’ve grown since then into a full-time engineer working across infra, DevOps, and AI-driven user experiences.
 
-Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**. I continue to explore through university based courses (Stanford’s XCS234 & XCS236), Azure certifications and independent research.
+Before Microsoft, I graduated from **IIIT Delhi** with a B.Tech. in Computer Science (CGPA: 8.34). My academic interests gravitated toward **distributed systems**, **machine learning**, and **deep learning**. I continue to explore through university based courses (Stanford’s XCS234 & XCS236), Azure certifications and independent research.
 
 Outside work, I love to read fiction and non-fiction books. I document my projects and learnings on this blog, not just to keep track of my growth, but also to make AI more accessible to fellow learners and builders.
 
@@ -17,7 +17,7 @@ This site is powered by curiosity and the belief that knowledge grows when share
 ---
 
 📌 **Quick Highlights**  
-- SWE @ Microsoft (L59 → L60): Working in Azure Specialized org. 
+- SWE @ Microsoft (L59 → L60): Working in Azure Specialized org
 - Certifications: Azure ([AZ-104](https://learn.microsoft.com/en-us/credentials/certifications/azure-administrator/?practice-assessment-type=certification), [AZ-201](https://learn.microsoft.com/en-us/credentials/certifications/azure-developer/?practice-assessment-type=certification), [AI-102](https://learn.microsoft.com/en-us/credentials/certifications/azure-ai-engineer/?practice-assessment-type=certification), [DP-420](https://learn.microsoft.com/en-us/credentials/certifications/azure-cosmos-db-developer-specialty/?practice-assessment-type=certification)), [XCS234](https://digitalcredential.stanford.edu/check/3EA90D2274EE4BB33FFFBB2C93091C16880FBA58DF11119933D828B32AF3868DVzFTOEJtVitJN2ROWlZqS3RXeit6V0FVeDltUWFselVQUTI1UjNWNHllSDdrbTQv), [XCS236](https://online.stanford.edu/courses/xcs236-deep-generative-models)  
 - Research published in [ACM HT’22](https://dl.acm.org/doi/10.1145/3511095.3536368)  
 - Winner of Microsoft’s Global Hackathon in Azure (3rd prize)  
@@ -47,6 +47,6 @@ This site is powered by curiosity and the belief that knowledge grows when share
 
 ---
 
-*Thanks for stopping by — and if you’re building something cool in AI, I’d love to hear from you!*  
+*Thanks for stopping by — and if you’re building something cool in AI, I’d love to hear from you! Feel free to email me at [atallakshaya@gmail.com](mailto: atallakshaya@gmail.com)*
 *This is my personal website, and all thoughts posted here are only mine and not linked to the workplace I am at.*
 
